force-app/main/default/objects/CHSP_Procurement_Based_AWP_Record__c/CHSP_Procurement_Based_AWP_Record__c.object-meta.xml
<CustomObject>
    <label>CHSP Procurement Based AWP Record</label>
    <nameField>
        <displayFormat>CPAWP-{000000000}</displayFormat>
        <label>CHSP Procurement Based AWP Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CHSP Procurement Based AWP Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>