force-app/main/default/objects/CHSP_Procurement_Based_AWP_Record__c/fields/Aged_Care_Planning_Region__c.field-meta.xml
<CustomField>
    <fullName>Aged_Care_Planning_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aged Care Planning Region</label>
    <referenceTo>Aged_Care_Planning_Region__c</referenceTo>
    <relationshipLabel>CHSP Procurement Based AWP Records</relationshipLabel>
    <relationshipName>CHSP_Procurement_Based_AWP_Records</relationshipName>
    <type>Lookup</type>
</CustomField>