force-app/main/default/objects/CHSP_Procurement_Based_AWP_Record__c/fields/Party_ID__c.field-meta.xml
<CustomField>
    <fullName>Party_ID__c</fullName>
    <label>Party ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>