force-app/main/default/objects/CHSP_Procurement_Based_AWP_Record__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>CHSP Procurement Based AWP Records</relationshipLabel>
    <relationshipName>CHSP_Procurement_Based_AWP_Records</relationshipName>
    <type>Lookup</type>
</CustomField>