force-app/main/default/objects/CHSP_Procurement_Based_AWP_Record__c/fields/Service_Type_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Level__c</fullName>
    <label>Service Type Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>