force-app/main/default/objects/CHSP_Procurement_Based_AWP_Record__c/fields/TotalFunding__c.field-meta.xml
<CustomField>
    <fullName>TotalFunding__c</fullName>
    <description>For use by Data Migration team</description>
    <label>Total Funding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>