force-app/main/default/objects/CHSP_Procurement_Based_AWP_Record__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit Of Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>