force-app/main/default/objects/CHSP_Procurement_Based_AWP_Record__c/validationRules/PBA_Activity_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>PBA_Activity_Status</fullName>
    <active>true</active>
    <errorConditionFormula>!(ISPICKVAL(Activity_Status__c,&apos;Inactive&apos;)||ISPICKVAL( Activity_Status__c,&apos;Approved&apos;))</errorConditionFormula>
    <errorDisplayField>Activity_Status__c</errorDisplayField>
    <errorMessage>The activity status is not valid, Please check the line item.</errorMessage>
</ValidationRule>