force-app/main/default/objects/CHSP_Procurement_Based_AWP_Record__c/validationRules/PBA_NoCareSubType.validationRule-meta.xml
<ValidationRule>
    <fullName>PBA_NoCareSubType</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Service_Care_Sub_Type__c )</errorConditionFormula>
    <errorDisplayField>Service_Care_Sub_Type__c</errorDisplayField>
    <errorMessage>Service Care Sub type is blank</errorMessage>
</ValidationRule>