force-app/main/default/objects/CHSP_Procurement_Based_AWP_Record__c/validationRules/PBA_UpdateServiceTypeLevel.validationRule-meta.xml
<ValidationRule>
    <fullName>PBA_UpdateServiceTypeLevel</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW()&amp;&amp; ISCHANGED(Service_Type_Level__c)</errorConditionFormula>
    <errorDisplayField>Service_Type_Level__c</errorDisplayField>
    <errorMessage>Service Type Level cannot be updated.</errorMessage>
</ValidationRule>